--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.21.4",
     "firebase-admin": "^10.0.0",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
